# win-client-azure

./: .gitignore  CLAUDE.md  LUCIDLINK-STORAGE.md  README.md  ll-win-client-aws.py  ll-win-client.py  pyproject.toml  setup-lucidlink-storage.sh  test-deployment.sh
deployment/: README.md  deploy-windows-client-azure.sh  deploy-windows-client.sh
docs/: TEST-PLAN.md  TESTING.md
iam/: QUICKSTART.md  README.md  cleanup.sh  main.tf  setup.sh  update-policy.sh
packer/: windows-client.pkr.hcl
packer/scripts/: install-software.ps1  winrm-setup.ps1
terraform/azure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/clients/: ec2-client.tf
terraform/clients/templates/: minimal-userdata.ps1  windows-userdata-min.ps1  windows-userdata.ps1
